--- a/config.yaml
+++ b/config.yaml
@@ -21,7 +21,7 @@ monitors:
     url: 'https://whrblog.online' # URL to fetch
     method: GET # default=GET
     expectStatus: 200 # operational status, default=200
-    followRedirect: false # should fetch follow redirects, default=false
+    followRedirect: true # should fetch follow redirects, default=false
     linkable: false # allows the title to be a link, default=true
 
   - id: Synology Nas
@@ -30,5 +30,5 @@ monitors:
     url: 'https://synology.whrblog.online:5001'
     method: PING
     expectStatus: 200
-    linkable: true # allows the title to be a link, default=true
+    linkable: false # allows the title to be a link, default=true
 
